--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<h2>Hotel Booking</h2>
 									<p>What kind of customer is more likely to cancel a booking?<br />
 									   How is the Cancellation Rate varied in different time periods?<br />
-									   Answering these questions is critical for hotel cpmpanies to decide which group of customers need extra attention and how many rooms to sell in each period.<br />
+									   Answering these questions is critical for hotel companies to decide which group of customers need extra attention and how many rooms to sell in each period.<br />
 									   By exploring, cleaning and visualizing the data, I was able to generate useful insights that support data-driven decisions.
 									   </p>
 								</header>
