--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="mailto:skyhuman69@gmail.com">skyhuman69@gmail.com</a></p>
+								<p><a href="mailto:rayyen@gmail.com">rayyen@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
