--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Ray The Analyst</h1>
-						<p>Data Analyst skilled in Excel, SQL, Tableau, and Python <a href="https://www.linkedin.com/in/rayyen69/">@RayYen</a><br />
+						<p>Data Analyst skilled in Excel, SQL, Tableau, R and Python <a href="https://www.linkedin.com/in/rayyen69/">@RayYen</a><br />
 							I have one year of experience transforming large datasets into actionable insights.<br />
 							As a data enthusiast,  I enjoy analyzing data to help companies solve real business problems.<br />
 							Currently pursuing my master's degree in Business Analytics at the University of Maryland, College Park. 
@@ -41,7 +41,7 @@
 							<li class="active"><a href="index.html">Projects</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://github.com/skyhuman69" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/RayYen6967" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="https://www.linkedin.com/in/rayyen69/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 						</ul>
 					</nav>
