--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								</header>
 								<a  class="image main"><img src="images/Hotel.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/skyhuman69/Portfolio-Projects/blob/main/Hotel%20Booking.sql" class="button large">Data Cleaning</a></li><li><a href="https://public.tableau.com/app/profile/ray.yen/viz/HotelBooking_16259259898850/HotelBooking" class="button large">Visualization</a></li>
+									<li><a href="https://github.com/RayYen6967/Portfolio-Projects/blob/main/Hotel%20Booking.sql" class="button large">Data Cleaning</a></li><li><a href="https://public.tableau.com/app/profile/ray.yen/viz/HotelBooking_16259259898850/HotelBooking" class="button large">Visualization</a></li>
 								</ul>
 								<p>This dataset contains 119390 observations from hotel real data.<br />
 								   Elements pertaining hotel or costumer identification had been artificially modified.
@@ -83,7 +83,7 @@
                                    To dig deeper, I also compared the price and weight in different periods of time.
 								</p>
 								<ul class="actions special">
-									<li><a href="https://github.com/skyhuman69/Portfolio-Projects/blob/main/North%20Atlantic%20Fishing.sql" class="button large">Data Cleaning</a></li><li><a href="https://public.tableau.com/app/profile/ray.yen/viz/NorthAtlanticFishing2002-2019/NorthAtlanticFishing" class="button large">Visualization</a></li>
+									<li><a href="https://github.com/RayYen6967/Portfolio-Projects/blob/main/North%20Atlantic%20Fishing.sql" class="button large">Data Cleaning</a></li><li><a href="https://public.tableau.com/app/profile/ray.yen/viz/NorthAtlanticFishing2002-2019/NorthAtlanticFishing" class="button large">Visualization</a></li>
 								</ul>
 							</article>
 							
@@ -106,7 +106,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-							    <li><a href="https://github.com/skyhuman69" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+							    <li><a href="https://github.com/RayYen6967" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/rayyen69/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 							</section>
 						</section>
