--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
 						<p>Data Analyst proficient in Excel, SQL, Tableau, Python and R.<br />
 							I am a data enthusiast who is self-motivated and detail-oriented.<br />
 							I have two years of experience transforming large datasets into actionable insights.<br />
-							My main fields of interest are Data Mining & Machine Learning. 
+							My main fields of interest are Business Intelligence & Machine Learning. 
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
