--- a/index1.html
+++ b/index1.html
@@ -20,9 +20,9 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1><a href="https://www.linkedin.com/in/rayyen69/">Ray the analyst</a></h1>
-						<p>Data Analyst proficient in Excel, SQL, Tableau, Python and R.<br />
+						<p>Data Analyst proficient in Python, R, SQL, Tableau, and Excel.<br />
 							I am a data enthusiast who is self-motivated and detail-oriented.<br />
-							I have two years of experience transforming large datasets into actionable insights.<br />
+							I have three years of experience transforming large datasets into actionable insights.<br />
 							My main fields of interest are Business Intelligence and Machine Learning. 
 						</p>
 						<ul class="actions">
