--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1><a href="https://www.linkedin.com/in/rayyen69/">Ray the analyst</a></h1>
 						<p>Data Analyst proficient in Python, R, SQL, Tableau, and Excel.<br />
 							I am a data enthusiast who is self-motivated and detail-oriented.<br />
-							I have three years of experience transforming large datasets into actionable insights.<br />
+							I have two years of experience transforming large datasets into actionable insights.<br />
 							My main fields of interest are Business Intelligence and Machine Learning. 
 						</p>
 						<ul class="actions">
@@ -58,7 +58,7 @@
 									<h2>Air Ticketing Forecast</h2>
 									<p>Airlines Reporting Corporation (ARC) accelerates growth for the travel industry and serves for its cooporated travel agencies and airlines.
 										Understanding future air travel is always a crucial issue for ARC as it wishes to provide better settlement services and data solutions.
-										In this capstone project, we collaborated with ARC experts to forecast the direct booking from airlines during 2022-2024 to assist executives in generating business strategies.
+										In this project, I led a team of 4 members to collaborate with ARC experts to forecast the direct booking from airlines during 2022-2024 to assist executives in generating business strategies.
 									   </p>
 								</header>
 								
