--- a/index1.html
+++ b/index1.html
@@ -22,7 +22,7 @@
 						<h1><a href="https://www.linkedin.com/in/rayyen69/">Ray the analyst</a></h1>
 						<p>Data Analyst proficient in Python, R, SQL, Tableau, and Excel.<br />
 							I am a data enthusiast who is self-motivated and detail-oriented.<br />
-							I have three years of experience transforming large datasets into actionable insights.<br />
+							I have two years of experience transforming large datasets into actionable insights.<br />
 							My main fields of interest are Business Intelligence and Machine Learning. 
 						</p>
 						<ul class="actions">
@@ -64,8 +64,8 @@
 										The SBA has periodically released data on the more than 11.5 million approved applications, but it also has removed applications that had been previously present in the dataset.
 										The SBA has not offered publicly a reason for the removal of these applications, although some theories seem reasonable to consider.
 									   </p>
-									<p>In this competition, our team aims to find useful insights of why certain loan applications have been removed from the program.
-										Additionally, we try to predict whether a loan application would be removed based on available information. 
+									<p>In this competition, I led a team of 3 members to analyze 600K of application records to generate useful insights that support small businesses in Georgia on loan application.
+										 
 									   </p>
 								</header>
 								
