--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,7 @@
 						<h1><a href="https://www.linkedin.com/in/rayyen69/">Ray the analyst</a></h1>
 						<p>Data Analyst proficient in Python, R, SQL, Tableau, and Excel.<br />
 							I am a data enthusiast who is self-motivated and detail-oriented.<br />
-							I have three years of experience transforming large datasets into actionable insights.<br />
+							I have two years of experience transforming large datasets into actionable insights.<br />
 							My main fields of interest are Business Intelligence & Machine Learning. 
 						</p>
 						<ul class="actions">
@@ -56,8 +56,8 @@
 								<header class="major">
 						
 									<h2>Economy Analysis</h2>
-									<p>There is no doubt that economy success is every country's greatest goal, and each country will try its best to outcompete the others.
-										However, the success of an economy does not solely rely on one aspect and is usually stemmed from complicated reasons.
+									<p>Economy success is vitally important for every country in the world.
+										However, the success does not solely rely on one aspect and is usually stemmed from complicated reasons.
 										This analysis attempts to discover the reasons why Canada has such a strong economy by analyzing different aspects of the country through Tableau visualizations.
 									</p>
 								</header>
@@ -80,7 +80,7 @@
 								<a  class="image fit"><img src="images/Hotel.jpg" alt="" /></a>
 								<p>What kind of customer is more likely to cancel a booking?<br>
 									How is cancellation rate varied in different time periods?<br>
-						            This project aims to provide insights to support hotel decision making.
+						            This project aims to analyze booking data to provide insights that support hotel decision making.
 									</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/skyhuman69/Portfolio-Projects/blob/main/Hotel%20Booking.sql" class="button large">View Code</a></li><li><a href="https://public.tableau.com/app/profile/ray.yen/viz/HotelBooking_16259259898850/HotelBooking" class="button large">View Dashboard</a></li>
@@ -94,9 +94,9 @@
 									<h2>Atlantic Fishing Analysis</h2>
 								</header>
 								<a  class="image fit"><img src="images/seafishing.webp" alt="" /></a>
-								<p>What affect the price and weight of fish?<br>
-								   Where to find the highest and lowest price in Norway?<br>
-								   This project aims to provide insights to support the fishing industry.
+								<p>What factors affect the price and weight of fish?<br>
+								   Where to find the best fish price in Norway?<br>
+								   This project aims to analyze fishing data to provide insights that support fishing industry.
 								</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/skyhuman69/Portfolio-Projects/blob/main/North%20Atlantic%20Fishing.sql" class="button large">View Code</a></li><li><a href="https://public.tableau.com/app/profile/ray.yen/viz/NorthAtlanticFishing2002-2019/NorthAtlanticFishing" class="button large">View Dashboard</a></li>
