--- a/index2.html
+++ b/index2.html
@@ -20,10 +20,10 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1><a href="https://www.linkedin.com/in/rayyen69/">Ray the analyst</a></h1>
-						<p>Data Analyst proficient in Python, R, SQL, Tableau, and Excel.<br />
+						<p>Data Analyst proficient in Python, SQL, Tableau and Excel.<br />
 							I am a data enthusiast who is self-motivated and detail-oriented.<br />
-							I have two years of experience transforming large datasets into actionable insights.<br />
-							My main fields of interest are Business Intelligence & Machine Learning. 
+							I have three years of experience transforming large datasets into actionable insights.<br />
+							My main fields of interest are Business Intelligence, Machine Learning and Artificial Intelligence. 
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
